# desktop-plugins

./: .gitignore  README.md  generate_mo  show_me_the_weather  update_po
.tx/: config
audio_helper/: audio_helper.coffee  audio_helper.js  info.ini  makefile
clock/: clock.coffee  clock.js  info.ini  makefile
clock/locale/: clock.pot
common/js/: menu_backup.coffee  utils.coffee  weatherParser.js
weather/: .weatherdata.coffee.swp  .yahooservice.coffee.swp  chinaweatherservice.coffee  cityMap.coffee  citymoremenu.coffee  citymoremenu.css  clientcityid.coffee  data.coffee  info.ini  makefile  tooltip.coffee  utils.coffee  weather.coffee  weather.css  weather.js  weatherParser.js  weatherdata.coffee  yahooservice.coffee
weather/city/: city_taiwan.json
weather/city_native/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json
weather/img/yahoo_api/: readme.txt
weather/includes/: dbus_common.h
weather/locale/: weather.pot
weather/purl/: README~  city_native.list  format.pl
weather/purl/onlyone/: city_native.list  city_native.list~  format.pl
weather/sql_inface/: CMakeLists.txt
weather/sql_inface/database/: .gitignore  CMakeLists.txt  DeepinSpeech.db
weather/sql_inface/src/: dbus_database.c  dbus_database.h  main.c  search_database.c
weather/trie_inface/: .gitignore  CMakeLists.txt
(+124 files in other folders)
